fixes nav alignment and logo on mobile

--- a/_src/scss/components/_homepage-press.scss
+++ b/_src/scss/components/_homepage-press.scss
@@ -3,7 +3,7 @@
     justify-content: space-around;
 
     a {
-      img { min-width: 120px; max-width: 180px; }
+      img { min-width: 80px; max-width: 180px; }
       &:last-of-type {
         display: none;
       }
